// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectAccountPage should render correctly 1`] = `
<div
  className="connect-account"
>
  <Card
    className="connect-account__card"
  >
    <p>
      <t
        icon="credit-card"
        size={72}
      />
    </p>
    <h2>
      setup-heading
    </h2>
    <p>
      <Link
        href="/tos-url"
        type="wc-admin"
      />
    </p>
    <p>
      <ForwardRef(Button)
        href="/wcpay-connect-url"
        isLarge={true}
        isPrimary={true}
      />
    </p>
    <p>
      <Link
        href="admin.php?page=wc-settings&tab=checkout"
        type="wp-admin"
      >
        Additional payment methods
      </Link>
    </p>
  </Card>
</div>
`;

exports[`ConnectAccountPage should render correctly when on-boarding disabled 1`] = `
<div
  className="connect-account"
>
  <Card
    className="connect-account__card"
  >
    <p>
      <t
        icon="credit-card"
        size={72}
      />
    </p>
    <h2>
      setup-heading
    </h2>
    <p>
      We've temporarily paused new account creation.
      <br />
      We'll notify you when we resume!
    </p>
  </Card>
</div>
`;
